--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <body>
     <h1>ЁБАНЫЙ КАЛЕНДАРЬ</h1>
-    <h1 id="price">ЦЕНА: ХХХ</h1>
-    <input type="text" id="airdatepicker" class="form-control" tabindex="1" />
+    <h1 id="price">ЦЕНА: XXX</h1>
+    <input type="text" id="airdatepicker" class="form-control" />
     <div data-text="This is the default text">Test</div>
   </body>
 
